# Blockchain

./: CMakeLists.txt  README.md  main.cpp
Core/: Block.cpp  Block.h  Blockchain.cpp  Blockchain.h  Blockheader.cpp  Blockheader.h  CoreObject.cpp  CoreObject.h  Transaction.cpp  Transaction.h
Tests/: CMakeLists.txt  README.md  cryptopp_stubs.cpp  test_Block.cpp  test_BlockHeader.cpp  test_Transaction.cpp
